# src/Models/Entity/Emprestimo.ts
@@ -6,18 +6,18 @@ export class Emprestimo {
     usuarioId: number;
     dataEmprestimo: Date;
     dataDevolucao: Date | null; 
+    dataDevolucaoPrevista: Date;
 
   
-    constructor(livroId: number, usuarioId: number) {
+    constructor(livroId: number, usuarioId: number, ) {
         if (livroId == null || usuarioId == null) {
             throw new Error("ID do Livro e ID do Usuário são obrigatórios para criar um empréstimo.");
         }
 
         this.livroId = livroId;
-        this.usuarioId = usuarioId;
-
-        
+        this.usuarioId = usuarioId;        
         this.dataEmprestimo = new Date(); 
-        this.dataDevolucao = null;      
+        this.dataDevolucao = null; 
+        this.dataDevolucaoPrevista = new Date();   
     }
 }
