# src/Models/dto/EmprestimoDto.ts
@@ -4,18 +4,21 @@ export class EmprestimoDto {
     usuarioId: number;
     dataEmprestimo: Date;
     dataDevolucao: Date | null; 
+    dataDevolucaoPrevista: Date;
 
     constructor(
         id: number,
         livroId: number,
         usuarioId: number,
         dataEmprestimo: Date,
-        dataDevolucao: Date | null 
+        dataDevolucao: Date | null, 
+        dataDevolucaoPrevista: Date,
     ) {
         this.id = id;
         this.livroId = livroId;
         this.usuarioId = usuarioId;
         this.dataEmprestimo = dataEmprestimo;
         this.dataDevolucao = dataDevolucao;
+        this.dataDevolucaoPrevista = dataDevolucaoPrevista;
     }
 }
